Only showing the app once the translations are loaded (should prevent ugly flicker of untranslated content) Also removing the "new" labels on the location list and adding it on the search button.

--- a/app/less/master.less
+++ b/app/less/master.less
@@ -40,7 +40,10 @@
 
 .badge.badge--new {
     background-color: @colourBrandOrange;
-    margin-left: 5px;
+    position: absolute;
+    padding-top: 0;
+    top: 21px;
+    left: 3px;
 }
 
 // No wrap helper class
